# deepwiki-to-md

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: release.yml
docs/designs/: 2026-04-07-deepwiki-to-md-cli.md  2026-04-07-dwmd-mcp-api.md
docs/plans/: 2026-04-07-dwmd-mcp-api.md
src/: lib.rs  main.rs  types.rs  writer.rs
src/mcp/: mod.rs  transport.rs  types.rs
src/pipeline/: json.rs  markdown.rs  mermaid.rs  mod.rs
src/wiki/: filter.rs  mod.rs
tests/: cli.rs
