[package]
name = "deepwiki-dl"
version = "0.1.0"
edition = "2021"
description = "Download DeepWiki documentation to local Markdown files"
license = "MIT"
repository = "https://github.com/cecil-su/deepwiki-to-md"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
yansi = "1"
thiserror = "2"
anyhow = "1"
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
